Basic layout and navigation ready

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,18 @@ code {
   background: none;
   border: none;
   cursor: pointer;
+  outline: none;
+  padding: 0px;
+  margin: 0px;
 }
 
 .marker-btn img {
   width: 25px;
   height: 25px;
 }
+
+.marker-btn:focus {
+  border: none;
+}
+
+
