--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,33 @@
 body {
-  margin: 0;
+    margin: 0;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 .marker-btn {
-  background: none;
-  border: none;
-  cursor: pointer;
-  outline: none;
-  padding: 0px;
-  margin: 0px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0px;
+    margin: 0px;
 }
 
 .marker-btn img {
-  width: 25px;
-  height: 25px;
+    width: 25px;
+    height: 25px;
 }
 
 .marker-btn:focus {
-  border: none;
+    border: none;
 }
 
 .font-small {
-  font-size: 12px;
+    font-size: 12px;
+}
+
+.object-fit-cover {
+    object-fit: cover;
 }
